# uv-cookie

./: .gitignore  README.md  cookiecutter.json
hooks/: post_gen_project.py
{{cookiecutter.project_name}}/: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Dockerfile  Makefile  README.md  justfile  mkdocs.yml  pyproject.toml
{{cookiecutter.project_name}}/.github/actions/setup-python/: action.yaml
{{cookiecutter.project_name}}/.github/workflows/: main.yaml  main.yml
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/.github/actions/setup-python/: action.yaml
{{cookiecutter.project_name}}/{{cookiecutter.project_slug}}/.github/workflows/: main.yaml
